--- a/servers/package.json
+++ b/servers/package.json
@@ -3,6 +3,8 @@
   "description": "Raindrop Servers",
   "version": "0.0.1",
   "dependencies": {
-    "q": ">= 0.0.1"
+    "q": ">= 0.0.1",
+    "q-util": ">= 0.0.1",
+    "nomnom": ">= 0.0.1"
   }
 }
