--- a/servers/package.json
+++ b/servers/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "q": ">= 0.0.1",
     "q-util": ">= 0.0.1",
-    "nomnom": ">= 0.0.1"
+    "nomnom": ">= 0.0.1",
+    "microtime": ">= 0.0.1"
   }
 }
