custom error fixes, serialize error name, convenience cleanup, gendb

--- a/servers/package.json
+++ b/servers/package.json
@@ -6,6 +6,7 @@
     "q": ">= 0.0.1",
     "q-util": ">= 0.0.1",
     "nomnom": ">= 0.0.1",
-    "microtime": ">= 0.0.1"
+    "microtime": ">= 0.0.1",
+    "redis": ">= 0.0.1"
   }
 }
