--- a/servers/package.json
+++ b/servers/package.json
@@ -6,6 +6,8 @@
     "q": ">= 0.5.2",
     "nomnom": ">= 0.0.1",
     "microtime": ">= 0.0.1",
-    "redis": ">= 0.0.1"
+    "redis": ">= 0.0.1",
+    "socket.io": ">= 0.7",
+    "paperboy": ">= 0.0.1"
   }
 }
