baby steps at jstut hookup

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "clients/deps/wmsy"]
 	path = clients/deps/wmsy
 	url = https://github.com/asutherland/wmsy.git
+[submodule "clients/deps/jstut"]
+	path = clients/deps/jstut
+	url = git://github.com/asutherland/jstut.git
