just do plain directory copies instead of an r.js build to build up addon's lib directory, note problems with trying to use IndexedDB in chrome.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ clients/addon/lib/modaTransport.js
 clients/addon/lib/q.js
 clients/addon/lib/socket.io.js
 clients/addon/lib/socket.io-client
+
+clients/addontest/lib
