--- a/servers/package.json
+++ b/servers/package.json
@@ -8,6 +8,7 @@
     "microtime": ">= 0.1.3-1",
     "redis": ">= 0.6.0",
     "socket.io": ">= 0.7",
-    "paperboy": ">= 0.0.2"
+    "paperboy": ">= 0.0.2",
+    "xmlhttprequest": ">=1.2.2"
   }
 }
