--- a/servers/package.json
+++ b/servers/package.json
@@ -7,6 +7,7 @@
     "nomnom": ">= 0.4.2",
     "microtime": ">= 0.1.3-1",
     "redis": ">= 0.6.7",
+    "jwcrypto": ">= 0.0.1",
     "xmlhttprequest": ">=1.2.2"
   }
 }
