--- a/servers/package.json
+++ b/servers/package.json
@@ -3,11 +3,12 @@
   "description": "Raindrop Servers",
   "version": "0.0.1",
   "dependencies": {
+    "connect": ">= 2.0.1",
     "q": ">= 0.8.0",
     "nomnom": ">= 0.4.2",
     "microtime": ">= 0.1.3-1",
     "redis": ">= 0.6.7",
-    "jwcrypto": ">= 0.0.1",
+    "jwcrypto": ">= 0.1.1",
     "xmlhttprequest": ">=1.2.2"
   }
 }
